--- a/public/css/estilo_base.css
+++ b/public/css/estilo_base.css
@@ -93,7 +93,7 @@ nav{
 	padding: 5px;
 }
 
-nav a{
+header nav a{
 	border-right: 1px solid #CCCDD2;
 	margin: -2px;
 	color: #848388;
@@ -242,6 +242,74 @@ ul{
 .digito_4{
 	margin-left:933px;
 }
+
+/*Estilo enlaces*/
+
+.articulo_separadores{
+	border-left: 2px solid #DADBDE;
+	border-right: 2px solid #DADBDE;
+}
+
+.caja_blanca{
+	background: white;
+	box-shadow: 0px 8px 5px #e8e8e8;
+	border-radius: 7px;
+	margin: 0 auto;
+	height: 180px;
+	width: 300px;
+}
+
+
+.caja_centro{
+	margin-top: 12px;
+}
+
+.caja_derecha{
+	margin-top: 40px;
+}
+
+.columna_3{
+	display: inline-block;
+	vertical-align: top;
+	width: 32%;
+}
+
+.contenedor p{
+	color: #79787D;
+	font-size: 16pt;
+}
+
+.enlaces{
+	background-image: url(../img/textura_1.png); 
+	height: 384px;
+	margin-top: 50px;
+	min-width: 1124px;
+	-webkit-box-shadow: inset 0px 3px 6px 2px rgba(232,232,232,1);
+	-moz-box-shadow: inset 0px 3px 6px 2px rgba(232,232,232,1);
+	box-shadow: inset 0px 3px 6px 2px rgba(232,232,232,1);
+}
+
+.enlaces article{
+	font-family: 'Signika';
+	margin-top: 4px;
+	text-align: center;
+	vertical-align: top;
+}
+
+.margin_top_50{
+	margin-top: 50px;
+}
+
+.mayuscula_negrilla{
+	font-weight: bold;
+	text-transform: uppercase;
+}
+
+.sorteo_en_vivo{
+	margin-top: 40px;
+}
+
+/*Fin estilo*/
 
 .fondo_footer{
 	background: #454344;
