--- a/public/css/estilo_base.css
+++ b/public/css/estilo_base.css
@@ -1,6 +1,7 @@
 *{
 	margin: 0;
 	padding: 0;
+	font-family: 'Open Sans', sans-serif;
 }
 
 @font-face{
@@ -15,6 +16,10 @@ body{
 a{
 	font-size: 11pt;
 	text-decoration: none;
+	-o-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-webkit-transition: all 0.5s ease;
+	transition: all 0.5s ease;
 }
 
 footer{
@@ -161,6 +166,7 @@ ul{
 }
 
 .nav_inferior a{
+	font-family: 'Signika', sans-serif;
 	font-size: 15pt;
 	color: #67666B;
 }
@@ -195,7 +201,7 @@ ul{
 .premio_numero{
 	font-size: 93pt;
 	margin-left: 205px;
-	margin-top: 40px;
+	margin-top: 20px;
 }
 
 .premio_letras{
@@ -224,7 +230,7 @@ ul{
 	font-family: 'trade-gothic', Helvetica;
 	font-size: 39pt;
 	position: absolute;
-	top: 193px;
+	top: 188px;
 }
 
 .digito_1{
@@ -281,8 +287,10 @@ ul{
 }
 
 .enlaces{
-	background-image: url(../img/textura_1.png); 
-	height: 384px;
+	background-image:url(../img/montanas.png),url(../img/textura_1.png);
+    background-repeat: no-repeat,repeat;
+    background-position: bottom center;
+    height: 360px;
 	margin-top: 50px;
 	min-width: 1124px;
 	-webkit-box-shadow: inset 0px 3px 6px 2px rgba(232,232,232,1);
@@ -328,11 +336,15 @@ ul{
 	margin-top: 10px;
 }
 
-.redes_sociales img{
+.redes_sociales a{
 	display: inline-block;
 	margin-right: 15px;
 	vertical-align: top;
-	width: 50px;
+	
+}
+
+.redes_sociales img{
+    width: 50px;    
 }
 
 .separador_visitantes{
@@ -411,3 +423,4 @@ ul{
 	margin-top: 100px;
 	width: 190px;
 }
+
