--- a/public/css/estilo_plantilla_1.css
+++ b/public/css/estilo_plantilla_1.css
@@ -429,3 +429,27 @@ margin-left: 75px
 	font-family: 'Signika';
 	margin-bottom: 20px;
 }
+
+.busqueda_contratos {
+	width: 60%
+}
+
+.contratos select, .contratos input[type=text]{
+	border: none;
+	border-radius: 7px;
+	box-shadow: 2px 2px #D9D9DA;
+	margin-bottom: 10px;
+	padding: 5px 10px;
+}
+
+.contratos select{
+width: 95%
+}
+
+*:focus{
+	outline: 0px;
+}
+
+.fecha_contratacion .btn_primary_verde{
+
+}
